# brokerAI

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  PROMPT.md  RALPH_TASK.md  README.md  alembic.ini  docker-compose.cloud.yml  docker-compose.yml  livro_nivel2_cap2.txt  project_status.md  pyproject.toml  ralph_prompt.md  ralph_prompt_m1.md
.claude/: settings.local.json
.claude/commands/: update-docs.md
.github/workflows/: ci.yml
agents/: llm.py
agents/claims/: __init__.py  graph.py  nodes.py  prompts.py  tools.py
agents/commissioning/: __init__.py  graph.py  nodes.py  prompts.py  tools.py
agents/commissioning/portal_adapters/: __init__.py  api_adapter.py  base.py  email_adapter.py  rpa_adapter.py
agents/onboarding/: graph.py  nodes.py  prompts.py  state.py
agents/orchestrator/: __init__.py  graph.py  nodes.py  prompts.py
agents/renewal/: README.md  graph.py  nodes.py  prompts.py  tools.py
api/: main.py
api/middleware/: auth.py
api/routes/: admin.py  scheduler.py  webhook.py
config/: insurers.example.json
docs/: agents_graph.mermaid  architecture.md  claims_flow.mermaid  commissioning_flow.mermaid  escopo_agentes_ia_corretora.txt  mvp_resumo_cliente.md  plano-implementacao-mvp.md  project_spec.md  renewal_flow.mermaid  roteiro_levantamento_corretora.txt  system_overview.mermaid
docs/agentes/: onboarding.md  renovacao-agente.md  renovacao.md  sinistro.md
docs/api/: m1-fundacao.md
docs/brainstorms/: 2026-03-10-painel-gestor-brainstorm.md
docs/guias/: conversation-guide-orchestrator.md  conversation-guide-pt1.md  conversation-guide-pt2.md  conversation-guide-sinistros.md  guia-de-implementacao.md  migracao-twilio-sandbox-para-producao.md  ralph-loop-com-github.md  ralph-loop-prompt-m4.md  whatsapp-provider-comparison.md
docs/plans/: 2026-03-10-feat-painel-gestor-plan.md
docs/produto/: casos-de-uso.md  entrevista-corretora-mar2026.md  plataforma-gestor.md  pre-requisitos-implementacao.md  reuniao-cliente-mar2026.md  roadmap.md  tese-da-empresa.md
docs/sessoes/: 2026-02-28-m1-concluido.md  2026-03-06-m2-validacao-docker-gemini.md  relatorio-teste-mvp-09032026.md
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_add_client_address_and_policy_minor_driver.py
models/: config.py  database.py  schemas.py
scripts/: init-db.sql  install_browsers.py  setup-gcp-vm.sh
services/: claim_service.py  commission_service.py  graph_memory_service.py  insurer_portal_service.py  nfse_service.py  notification_service.py  onboarding_service.py  policy_service.py  renewal_service.py  scheduler_service.py
tests/: conftest.py
tests/unit/: test_admin_policies.py  test_claims_agent.py  test_onboarding_agent.py  test_renewal_graph.py  test_renewal_service.py  test_renewal_tools.py  test_webhook.py
