[project]
name = "brokerai"
version = "0.1.0"
description = "Agentes de IA para corretora de seguros"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langsmith>=0.1.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "boto3>=1.35.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "sentry-sdk[fastapi]>=2.0.0",
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.0",
    # Portal automation (RPA)
    "playwright>=1.48.0",
    # 2FA automation
    "pyotp>=2.9.0",
    # Email IMAP (para 2FA por e-mail)
    "aioimaplib>=1.1.0",
    # Encryption (credenciais das seguradoras)
    "cryptography>=43.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    # SQLite async para testes em memória (sem necessidade de PostgreSQL)
    "aiosqlite>=0.20.0",
]

# V1+ — Graph Memory Layer (Graphiti + Neo4j + LangMem)
# Instalar com: pip install brokerai[v1]
v1 = [
    # Graphiti — engine de knowledge graph temporal (Zep)
    "graphiti-core>=0.3.0",
    # Neo4j — driver oficial para banco de grafo
    "neo4j>=5.0.0",
    # LangMem — SDK de memória de longo prazo integrado ao LangGraph
    "langmem>=0.0.1",
    # LangChain Community — integrações de grafo
    "langchain-community>=0.3.0",
]

[tool.setuptools.packages.find]
include = ["api*", "agents*", "models*", "services*", "migrations*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["UP017"]  # datetime.UTC requer Python 3.11 — runtime de testes usa 3.10

[tool.ruff.lint.per-file-ignores]
"migrations/**" = ["E501"]
"tests/**" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "models.database"
ignore_errors = true

# Agentes são stubs com implementação pendente (M2/M3/M4) — erros de tipo esperados
[[tool.mypy.overrides]]
module = "agents.*"
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
